Revision history for Dist-Zilla-PluginBundle-IDOPEREL

{{$NEXT}}

v0.600.1  2011-03-22 00:00:41 Asia/Jerusalem
	- Moved version declaration to same line as "use version", as per
	  version's documentation
	- Added Plugin::Prereqs in order to add the version module to the
	  configure_requires sections, as per version's documentation

v0.600.0  2011-03-21 23:46:59 Asia/Jerusalem
	- Added Plugin::InstallGuide
	- Added Plugin::VersionFromModule in favor of Plugin::PkgVersion so I
	  could use the version module for versioning

0.5       2011-03-14 22:08:43 Asia/Jerusalem
	- Removed Plugin::LatestPrereqs as it's not ready yet (enforces core
	  modules which is bad)
	- Added Plugin::Signature

0.4       2010-12-28 16:10:03 Asia/Jerusalem
	- Added Plugin::LatestPrereqs

0.3       2010-12-21 21:20:47 Asia/Jerusalem
	- Removed the disappearing Plugin::LoadTests

0.2       2010-11-16 12:46:38 Asia/Jerusalem
	- Added Plugin::CheckChangesHasContent
	- Added Plugin::LoadTests
	- Added Plugin::DistManifestTests
	- Replaced deprecated Plugin::AutoPrereq with Plugin::AutoPrereqs

0.1       2010-08-18 13:40:47 Asia/Jerusalem
	- Initial release