@@ -37,7 +37,7 @@ DESCRIPTION
             version = 0.77
 
 INTERNAL METHODS
-  bundle_config
+  configure
 AUTHOR
     Ido Perlmuter, "<ido at ido50.net>"
 
@@ -73,11 +73,8 @@ SUPPORT
 
         <http://search.cpan.org/dist/Dist-Zilla-PluginBundle-IDOPEREL/>
 
-ACKNOWLEDGMENTS
-    Based on Dist::Zilla::PluginBundle::PDONELAN by Patrick Donelan.
-
 LICENSE AND COPYRIGHT
-    Copyright 2010 Ido Perlmuter.
+    Copyright 2010-2011 Ido Perlmuter.
 
     This program is free software; you can redistribute it and/or modify it
     under the terms of either: the GNU General Public License as published
